small manual changes

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Stack-Lernwerkzeug</title>
+    <title>Stack64</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h1>Stack-Lernwerkzeug</h1>
+<h1>Stack64</h1>
 <div class="container">
     <div class="editor">
         <h2>Code-Editor</h2>
