Added type safety, line highlighting, better parsing and multiple stack support

--- a/index.html
+++ b/index.html
@@ -1,23 +1,35 @@
 <!DOCTYPE html>
 <html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <title>Stack64</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-<h1>Stack64</h1>
-<div class="container">
-    <div class="editor">
-        <h2>Code-Editor</h2>
-        <textarea id="code-input" placeholder="Schreiben Sie hier Ihren Java-Code..."></textarea>
-        <button id="run-code">Code Ausführen</button>
-    </div>
-    <div class="stack-display">
-        <h2>Stack-Anzeige</h2>
-        <div id="stack-container"></div>
-    </div>
-</div>
-<script src="script.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Stack64</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <h1>Stack64</h1>
+        <div class="container">
+            <div class="editor">
+                <h2>Code-Editor</h2>
+                <div>
+                    <div id="code-highlight"></div>
+                    <textarea id="code-input" placeholder="Schreiben Sie hier Ihren Java-Code..."></textarea>
+                </div>
+                <div id="button-container">
+                    <button id="reset">Zurücksetzen</button>
+                    <button id="run-line">Zeile 0 ausführen</button>
+                    <button id="run-code">Code ausführen</button>
+                </div>
+            </div>
+            <div class="stack-display">
+                <h2>Stack-Anzeige</h2>
+                <div id="stack-container">
+                    
+                </div>
+            </div>
+        </div>
+        <footer>
+            <a href="https://github.com/DominikKor/64Simulator" target="_blank">Source Code on GitHub</a>
+        </footer>
+        <script src="dist/script.js"></script>
+    </body>
 </html>
