--- a/index.html
+++ b/index.html
@@ -3,21 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <title>Stack64</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+          rel="stylesheet">
 </head>
 <body>
-<h1>Stack64</h1>
-<div class="container">
-    <div class="editor">
-        <h2>Code-Editor</h2>
-        <textarea id="code-input" placeholder="Schreiben Sie hier Ihren Java-Code..."></textarea>
-        <button id="run-code">Code Ausführen</button>
+    <div class="container">
+        <div id="toggle-mode-container" class="d-inline-flex align-items-center py-3 mt-2 mb-5 header">
+            <h1 id="mode-title" class="me-4 stack">STACK24 – Hier stack ich alles.</h1>
+            <div class="mode-switcher d-inline-flex align-items-center ms-auto">
+                <button class="btn btn-mode active" id="mode-stack" data-mode="stack">Stapel</button>
+                <button class="btn btn-mode ms-2" id="mode-queue" data-mode="queue" style="margin-right: 3px">Schlange</button>
+            </div>
+        </div>
     </div>
-    <div class="stack-display">
-        <h2>Stack-Anzeige</h2>
-        <div id="stack-container"></div>
+    <div class="container">
+        <div class="editor">
+            <h2>Code-Editor</h2>
+            <div class="form-floating">
+                <div id="read-only-code-line" class="form-control read-only-line">
+                    Stack&lt;String&gt; s = new Stack&lt;String&gt;();
+                </div>
+                <textarea id="code-input" class="form-control code-textarea"></textarea>
+                <label for="code-input">Schreibe hier Deinen Java-Code...</label>
+            </div>
+            <button class="btn btn-dark" id="run-code">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play-fill" viewBox="0 0 16 16"><path d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393"/></svg>
+                Code ausführen
+            </button>
+        </div>
+        <div id="stack-display">
+            <h2 class="mode-visualiser-title">Stapel</h2>
+            <div id="stack-container"></div>
+        </div>
+        <div id="queue-display" class="display-none">
+            <h2 class="mode-visualiser-title">Schlange</h2>
+            <div id="queue-container"></div>
+        </div>
     </div>
-</div>
-<script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="script.js" type="module"></script>
 </body>
 </html>
