--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
     </div>
     <div class="container">
         <div class="editor">
-            <h2>Code-Editor</h2>
+            <div class="d-flex">
+                <h2>Code-Editor</h2>
+                <div class="flex-grow-1" aria-hidden="true"></div>
+                <button class="btn" id="clear-code"><ion-icon name="trash-outline"></ion-icon></button>
+            </div>
             <div class="form-floating">
                 <div id="read-only-code-line" class="form-control read-only-line">
                     Stack&lt;String&gt; s = new Stack&lt;String&gt;();
@@ -55,6 +59,8 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="script.js" type="module"></script>
 </body>
 </html>
