Added clear buttons to both containers and made it also clear the container

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="d-flex">
                 <h2>Code-Editor</h2>
                 <div class="flex-grow-1" aria-hidden="true"></div>
-                <button class="btn" id="clear-code"><ion-icon name="trash-outline"></ion-icon></button>
+                <button class="btn clear-btn"><ion-icon name="trash-outline"></ion-icon></button>
             </div>
             <div class="form-floating">
                 <div id="read-only-code-line" class="form-control read-only-line">
@@ -46,11 +46,19 @@
             </div>
         </div>
         <div id="stack-display">
-            <h2 class="mode-visualiser-title">Stapel</h2>
+            <div class="d-flex">
+                <h2 class="mode-visualiser-title">Stapel</h2>
+                <div class="flex-grow-1" aria-hidden="true"></div>
+                <button class="btn clear-btn"><ion-icon name="trash-outline"></ion-icon></button>
+            </div>
             <div id="stack-container"></div>
         </div>
         <div id="queue-display" class="display-none">
-            <h2 class="mode-visualiser-title">Schlange</h2>
+            <div class="d-flex">
+                <h2 class="mode-visualiser-title">Schlange</h2>
+                <div class="flex-grow-1" aria-hidden="true"></div>
+                <button class="btn clear-btn"><ion-icon name="trash-outline"></ion-icon></button>
+            </div>
             <div id="queue-container"></div>
             <span id="head-indicator">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-90deg-up" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M4.854 1.146a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L4 2.707V12.5A2.5 2.5 0 0 0 6.5 15h8a.5.5 0 0 0 0-1h-8A1.5 1.5 0 0 1 5 12.5V2.707l3.146 3.147a.5.5 0 1 0 .708-.708z"/></svg>
