Added repo link

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <button class="btn btn-mode active" id="mode-stack" data-mode="stack">Stapel</button>
                 <button class="btn btn-mode ms-2" id="mode-queue" data-mode="queue" style="margin-right: 3px">Schlange</button>
             </div>
+            <a href="https://github.com/DominikKor/64Simulator" target="_blank" class="icon-link link-dark" title="Zum GitHub-Repository des Tools" aria-label="GitHub-Repository link" style="margin-left: 10px;"><ion-icon name="logo-github" size="large"></ion-icon></a>
         </div>
     </div>
     <div class="container">
