--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="d-flex">
                 <h2>Code-Editor</h2>
                 <div class="flex-grow-1" aria-hidden="true"></div>
-                <button class="btn clear-btn"><ion-icon name="trash-outline"></ion-icon></button>
+                <button class="btn" id="clear-all"><ion-icon name="trash-outline"></ion-icon></button>
             </div>
             <div class="form-floating" id="all-editor">
                 <div class="form-control read-only-line read-only-code-line">
@@ -72,7 +72,7 @@
             <div class="d-flex">
                 <h2 class="mode-visualiser-title">Stapel</h2>
                 <div class="flex-grow-1" aria-hidden="true"></div>
-                <button class="btn clear-btn"><ion-icon name="trash-outline"></ion-icon></button>
+                <button class="btn" id="clear-stack"><ion-icon name="trash-outline"></ion-icon></button>
             </div>
             <div id="stack-container"></div>
         </div>
@@ -80,7 +80,7 @@
             <div class="d-flex">
                 <h2 class="mode-visualiser-title">Schlange</h2>
                 <div class="flex-grow-1" aria-hidden="true"></div>
-                <button class="btn clear-btn"><ion-icon name="trash-outline"></ion-icon></button>
+                <button class="btn" id="clear-queue"><ion-icon name="trash-outline"></ion-icon></button>
             </div>
             <div id="queue-container"></div>
             <span id="head-indicator">
