Reverted to all mode as default

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                 <label for="line-input">Schreibe hier deinen Java-Code...</label>
             </div>
             <div id="editor-mode-group" class="btn-group" role="group">
-                <input type="radio" class="btn-check" name="editor-mode" id="editor-mode-all" autocomplete="off">
+                <input type="radio" class="btn-check" name="editor-mode" id="editor-mode-all" autocomplete="off" checked>
                 <label class="btn btn-outline-dark w-50" for="editor-mode-all">Standard-Modus</label>
 
-                <input type="radio" class="btn-check" name="editor-mode" id="editor-mode-line" autocomplete="off" checked>
+                <input type="radio" class="btn-check" name="editor-mode" id="editor-mode-line" autocomplete="off">
                 <label class="btn btn-outline-dark w-50" for="editor-mode-line">Zeilen-Modus</label>
             </div>
 
