--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <div id="toggle-mode-container" class="d-inline-flex align-items-center py-3 mt-2 mb-5 header">
-            <h1 id="mode-title" class="me-4 stack">STACK24 – Hier stack ich alles.</h1>
+            <img src="logo.png" id="logo" alt="STACK24 - Hier stack ich alles.">
             <div class="mode-switcher d-inline-flex align-items-center ms-auto">
                 <button class="btn btn-mode active" id="mode-stack" data-mode="stack">Stapel</button>
                 <button class="btn btn-mode ms-2" id="mode-queue" data-mode="queue" style="margin-right: 3px">Schlange</button>
